fix right alignment of plots

--- a/public/stylesheets/sass/style.sass
+++ b/public/stylesheets/sass/style.sass
@@ -71,11 +71,13 @@ body
     .nodata
       font-style: italic
       color: #bbb
-    .plot
+    .frame
       width: auto
-      height: 200px
-      //padding-right: 12px
+      padding-right: 16px
       background-color= !whiteish
+      .plot
+        width: auto
+        height: 200px
   ul#navigation
     color= !contrast
     font-size: 22px
